<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="Mqtt details">

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue="kvajpoj.com"
            android:dialogTitle="Server address"
            android:key="@string/pMqttServerAddress"
            android:inputType="textUri"
            android:dialogMessage="Please enter Mqtt server address"
            android:singleLine="true"
            android:summary="Mqtt server URL"
            android:title="Server address"/>

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue="8833"
            android:dialogTitle="Server port"
            android:key="@string/pMqttServerPort"
            android:dialogMessage="Enter custom Mqtt server port. When empty, default port 1883 will be used."
            android:numeric="integer"
            android:singleLine="true"
            android:summary="Port number for Mqtt server"
            android:title="Server port"/>

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue=""
            android:dialogTitle="Username"
            android:key="@string/pMqttUsername"
            android:dialogMessage="Your username for authentication with Mqtt server. Leave it empty for signing in as a guest"
            android:singleLine="true"
            android:summary="Username"
            android:title="Username"/>

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue=""
            android:dialogTitle="Password"
            android:dialogMessage="Your password for authentication with Mqtt server. Leave it empty for signing in as a guest"
            android:key="@string/pMqttPassword"
            android:password="true"
            android:singleLine="true"
            android:summary="Password"
            android:title="Password"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Homie settings">

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:defaultValue="homie"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-_."
            android:dialogTitle="Base topic"
            android:drawableTint="@color/colorAccent"
            android:dialogMessage="All nodes with matching base topic will be recognized and treated as Homie nodes"
            android:inputType="textVisiblePassword"
            android:key="@string/pHomieBaseTopic"

            android:singleLine="false"
            android:title="Base topic"/>

        <Preference android:title="Delete nodes"
                    android:key="@string/pHomieDeleteNodes"
                    android:summary="Tap here to delete all Homie nodes from application. Nodes will be recreated, if Homie base topic is set "/>
    </PreferenceCategory>

    <PreferenceCategory android:title="About Homies">

        <Preference
            android:summary="All rights reserved\nAndrej Debeljak\n2017"
            android:title="Version 1.0"/>


    </PreferenceCategory>

</PreferenceScreen>